<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_gradient" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_authentication_background"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/black"
            android:fontFamily="@font/fibra_one_bold"/>

        <EditText
            android:id="@+id/atvUsernameReg"
            style="@style/EditTextSignUp"
            android:background="@drawable/edit_text_authentication_background"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="College"
            android:textColor="@color/black"
            android:fontFamily="@font/fibra_one_bold"/>

        <EditText
            android:id="@+id/atvCollegeReg"
            style="@style/EditTextSignUp"
            android:background="@drawable/edit_text_authentication_background"
            android:drawableLeft="@drawable/ic_school_black_24dp"
            android:drawablePadding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_college"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Email Address"
            android:textColor="@color/black"
            android:fontFamily="@font/fibra_one_bold"/>

        <EditText
            android:id="@+id/atvEmailReg"
            style="@style/EditTextSignUp"
            android:background="@drawable/edit_text_authentication_background"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Password"
            android:textColor="@color/black"
            android:fontFamily="@font/fibra_one_bold"/>


        <EditText
            android:id="@+id/atvPasswordReg"
            style="@style/EditTextSignUp"
            android:background="@drawable/edit_text_authentication_background"
            android:drawableLeft="@drawable/ic_password_black_24dp"
            android:drawablePadding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background_selector"
            android:text="Sign Up"
            android:fontFamily="@font/fibra_one_bold"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="#FFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80D1D1D1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="28dp"
                android:weightSum="90">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:fontFamily="@font/fibra_one_bold"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="Already a member?"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:fontFamily="@font/fibra_one_bold"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text=" Sign in"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Registration"
        android:textColor="#FFF"
        android:gravity="center_horizontal"
        android:fontFamily="@font/fibra_one_bold"
        android:layout_marginTop="40dp"
        android:textSize="28sp" />
</RelativeLayout>