<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/night_300" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_authentication_background"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Email Address"
            android:textColor="@color/black"
            android:fontFamily="@font/fibra_one_bold"/>

        <EditText
            android:id="@+id/login_mail"
            style="@style/EditTextSignUp"
            android:background="@drawable/edit_text_authentication_background"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/black"
            android:fontFamily="@font/fibra_one_bold"/>

        <EditText
            android:id="@+id/login_password"
            style="@style/EditTextSignUp"
            android:background="@drawable/edit_text_authentication_background"
            android:drawableLeft="@drawable/ic_password_black_24dp"
            android:drawablePadding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/fibra_one_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background_selector"
            android:text="Login "
            android:fontFamily="@font/fibra_one_bold"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="#FFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#80D1D1D1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:weightSum="90">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:fontFamily="@font/fibra_one_bold"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="Not registered yet?"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:fontFamily="@font/fibra_one_bold"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text=" Sign up now"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogle"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.google.android.gms.common.SignInButton>

    </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogLogo"
        android:layout_centerHorizontal="true"
        android:text="Login"
        android:textColor="#FFF"
        android:gravity="center_horizontal"
        android:fontFamily="@font/fibra_one_bold"
        android:layout_marginTop="40dp"
        android:textSize="32sp" />
</RelativeLayout>